# news-aggregator

./: pyproject.toml
app/models/: article.py  db_connection.py  docker-compose.yml  postrgres.conf  tag.py  user_interests.py  users.py
app/utils/: __init__.py  logger_conf.py
